--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,24 +9,32 @@
     <TextView
         android:id="@+id/result_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_height="@dimen/text_result_box_width"
+        android:layout_marginTop="116dp"
+        android:background="@color/G_Blue"
         android:text="@string/result_text"
         android:textAlignment="center"
-        android:textSize="@dimen/text_size"
+        android:gravity="center"
+        android:textSize="@dimen/big_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/result_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/number_result_box_width"
+        android:layout_marginTop="12dp"
+        android:background="@color/G_Yellow"
         android:text="@string/result_text"
         android:textAlignment="center"
-        android:textSize="@dimen/text_size"
+        android:gravity="center"
+        android:textSize="@dimen/medium_text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_text" />
 
     <Button
