--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,13 @@
     <dimen name="mic_width">200dp</dimen>
     <dimen name="peekSize">100dp</dimen>
     <dimen name="starSize">70dp</dimen>
-    <dimen name="text_size">40sp</dimen>
+
+    <dimen name="big_text">40sp</dimen>
+    <dimen name="medium_text">30sp</dimen>
+
+    <dimen name="text_result_box_width">80dp</dimen>
+    <dimen name="number_result_box_width">50dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
