--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +10,8 @@
 
     <TextView
         android:id="@+id/result_text"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="384dp"
+        android:layout_height="68dp"
         android:layout_marginTop="116dp"
         android:layout_marginBottom="12dp"
         android:background="@color/G_Blue"
@@ -20,7 +21,6 @@
         android:textSize="@dimen/big_text"
         app:layout_constraintBottom_toTopOf="@+id/result_number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +28,10 @@
     <TextView
         android:id="@+id/result_number"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="105dp"
         android:layout_marginBottom="9dp"
         android:background="@color/G_Yellow"
         android:gravity="center"
@@ -38,24 +41,30 @@
         android:textAlignment="center"
         android:textSize="@dimen/medium_text"
         app:layout_constraintBottom_toTopOf="@+id/reject_btn"
-        app:layout_constraintEnd_toStartOf="@+id/accept_btn"
-        app:layout_constraintStart_toStartOf="@+id/accept_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_text" />
 
     <Button
         android:id="@+id/reject_btn"
         android:layout_width="189dp"
         android:layout_height="293dp"
+        android:layout_marginTop="3dp"
         android:text="@string/reject_btn"
-        tools:layout_editor_absoluteY="273dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/accept_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/result_number" />
 
     <Button
         android:id="@+id/accept_btn"
         android:layout_width="195dp"
         android:layout_height="299dp"
+        android:layout_marginTop="4dp"
         android:text="@string/accept_btn"
-        tools:layout_editor_absoluteX="189dp"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/reject_btn"
+        app:layout_constraintTop_toBottomOf="@+id/result_number" />
 
 
 </android.support.constraint.ConstraintLayout>
